# triage

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
triage_py/: smoketest.py
triage_py/api/: main.py
triage_py/config/: rules.yaml
triage_py/core/: hashutil.py  models.py
triage_py/llm/: base.py  decorators.py  langchain_adapter.py
triage_py/preprocess/: base.py  language.py  normalize.py  pii.py  pipeline.py
triage_py/responder/: account.py  base.py  billing.py  factory.py  fraud.py  general.py  returns.py  shipping.py  tech.py
triage_py/routing/: base.py  embed_langchain.py  llm_router.py  orchestrator.py  rules.py
triage_py/tests/: test_api.py  test_llm.py
